fix(ffe-form): fjerner z-index fra radio-block-sirkelen

--- a/packages/ffe-form/less/radio-block.less
+++ b/packages/ffe-form/less/radio-block.less
@@ -38,7 +38,6 @@
             grid-row: 1 e('/') 2;
             content: '';
             left: var(--ffe-spacing-sm);
-            z-index: 1;
             background-color: var(--ffe-color-surface-primary-default);
             border: var(--ffe-g-border-width) solid var(--outer-border-color);
             width: 20px;
